bpo-44409: Fix error location in tokenizer errors that happen during initialization